Bug 312427 - Password input field doesn't get focus
Summary: Password input field doesn't get focus
Status: RESOLVED FIXED
Alias: None
Product: kscreensaver
Classification: Unmaintained
Component: locker-qml (other bugs)
Version First Reported In: 4.9.97 RC2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 311033 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-31 11:49 UTC by Dirk Heinrichs
Modified: 2013-06-22 06:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Heinrichs 2012-12-31 11:49:59 UTC
With the old screen locker, the password input field got the focus automatically so that I could simply enter my password to unlock the session. With the new one, I alwas have to click into the password field, before I can enter the pw.

Reproducible: Always

Steps to Reproduce:
1. Try to enter password to unlock session.

Actual Results:  
Nothing happens, since password input field doesn't have focus.

Expected Results:  
Password is entered and session is unlocked.
Comment 1 Dirk Heinrichs 2012-12-31 11:52:09 UTC
Actually, I'm refering to 4.10RC1 (4.9.95), but this is not yet in the list.
Comment 2 Marco Martin 2013-01-10 19:29:11 UTC
do you have a screensaver enabled? if so is dubplicate of #311033
Comment 3 Dirk Heinrichs 2013-01-10 20:31:51 UTC
Yes, I have a (k)screensaver enabled (KSlideshow).
Comment 4 Marco Martin 2013-01-10 20:41:47 UTC
Git commit 1eeb5b2f9f4a9b8edd90dea7f0538177d726126c by Marco Martin.
Committed on 10/01/2013 at 21:40.
Pushed by mart into branch 'KDE/4.10'.

ensure locker has focus when screensaver hides
FIXED-IN:4.10

M  +14   -0    ksmserver/screenlocker/greeter/greeterapp.cpp
M  +1    -0    ksmserver/screenlocker/greeter/greeterapp.h
M  +3    -0    ksmserver/screenlocker/greeter/screensaverwindow.cpp
M  +3    -0    ksmserver/screenlocker/greeter/screensaverwindow.h

http://commits.kde.org/kde-workspace/1eeb5b2f9f4a9b8edd90dea7f0538177d726126c
Comment 5 Marco Martin 2013-01-11 09:25:48 UTC
*** Bug 311033 has been marked as a duplicate of this bug. ***
Comment 6 Dirk Heinrichs 2013-06-21 18:37:52 UTC
I don't think it's really fixed in 4.10.4, since the password dialog's text input field still doesn't get focus when the screen saver hides.
Comment 7 Dirk Heinrichs 2013-06-22 06:38:13 UTC
Hmm, it seems to work sometimes. However, couldn't figure out what makes it not work, yet.