ensure locker has focus when screensaver hides

BUG:312427
FIXED-IN:4.10