ksmserver/screenlocker/greeter/screensaverwindow.cpp
@@ -125,6 +125,7 @@ void ScreenSaverWindow::mousePressEvent(QMouseEvent *event)
     //reappear in one minute
     m_reactivateTimer->start(1000 * 60);
     hide();
+    emit hidden();
 }
 
 
@@ -133,6 +134,7 @@ void ScreenSaverWindow::keyPressEvent(QKeyEvent *event)
     Q_UNUSED(event)
 
     hide();
+    emit hidden();
 }
 
 void ScreenSaverWindow::mouseMoveEvent(QMouseEvent *event)
@@ -143,6 +145,7 @@ void ScreenSaverWindow::mouseMoveEvent(QMouseEvent *event)
     if ((event->globalPos() - m_startMousePos).manhattanLength() > QApplication::startDragDistance()) {
         m_startMousePos = QPoint(-1, -1);
         hide();
+        emit hidden();
         //reappear in one minute
         m_reactivateTimer->start(1000 * 60);
     }
